# dbcop

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
doc/: notes.txt
docker/: docker-compose.yml
docker/antidotedb/: antidotedb.yml  connect.erl
docker/cockroachdb/: cockroachdb.yml
docker/dgraph/: docker-compose.yml
docker/galera/: docker-compose.yml  my_custom.cnf
docker/galera/swarm/: arch.yml
docker/mariadb/: docker-compose.yml
docker/memgraph/: docker-compose.yml
docker/postgres/: docker-compose.yml
docker/yugabyte/: docker-compose.yml
examples/: antidotedb.rs  cockroachdb.rs  dgraph.rs  galera.rs  memgraph.rs  postgres.rs  postgres_ser.rs  tidb.rs  yugabyte.rs  yugabyte_ser.rs
histories/yaml/: non_cc.yaml
oopsla19/: Dockerfile  README.md  plot_final.py  run.sh  veri_stat.py
script/: compare-cobralogs.sh  compare-optimise-cobralogs.sh  compare-optimise.sh  compare.sh  multi.py  plot-cobra.py  plot.py  reproduce.sh  run-dbcop.sh  test-dgraph.sh
src/: lib.rs  main.rs
src/algo/: algo.rs  bench.rs  mod.rs  txn.rs  var.rs
src/clients/: dgraph.rs  dyncluster.rs  galera.rs  memgraph.cpp  memgraph.h  memgraph.rs  mod.rs  mysql.rs  postgres.rs  postgres_ser.rs  tidb.rs  yugabyte.rs  yugabyte_ser.rs
src/consistency/: algo.rs  causal.rs  mod.rs  sat.rs  ser.rs  si.rs  util.rs
src/db/: cluster.rs  distribution.rs  history.rs  mod.rs  op.rs  slowq.rs
src/verifier/: mod.rs
src/verifier/consistency/: algo.rs  mod.rs  util.rs
