[package]
name = "dbcop"
version = "0.1.0"
authors = ["Ranadeep Biswas <ranadip.bswas@gmail.com>"]

[dependencies]
rand = "0.8.5"
clap = "2.33.3"
serde = { version = "1.0.117", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
bincode = "1.3.1"
zipf = "7.0.0"

[dev-dependencies]
nom = "6.0.0"
mysql = "17.0.0"
postgres = "0.19.3"
mongodb = "1.1.1"
byteorder = "1.3.4"
antidotedb = { git = "https://github.com/rnbguy/antidotedb_rs" }
dgraph-tonic = { version = "0.10.0", features = ["sync"] }
rsmgclient = "2.0.0"
indicatif = "0.16.2"

[profile.release]
opt-level = 3
debug = true

