[package]
name = "dbcop"
version = "0.1.0"
authors = ["Ranadeep Biswas <ranadip.bswas@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8.5"
clap = "3.2.15"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
chrono = { version = "0.4.19", features = ["serde"] }
bincode = "1.3.3"
zipf = "7.0.0"
dgraph-tonic = { version = "0.10.0", features = ["sync"] }
postgres = "0.19.3"
indicatif = "0.16.2"
mysql = "22.2.0"
# rsmgclient = "2.0.0"
cxx = "1.0.72"

[build-dependencies]
cmake = "0.1.48"
cxx-build = "1.0.72"

[profile.release]
opt-level = 3
debug = true

